débeugage sur certaine fonctionnalité
