# app/Http/Controllers/Annotations/AuthentificationAnnotationController.php
@@ -53,12 +53,25 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="400", description="Bad Request"),
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="", required=false, @OA\Schema(type="string")
  * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                     @OA\Property(property="email", type="string"),
+ *                     @OA\Property(property="password", type="string"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
  *     tags={"Authentification"},
 *),
 
