# app/Http/Controllers/Annotations/GestionEtudiantAnnotationController.php
@@ -26,7 +26,7 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\POST(
- *     path="/api/etudiants/{etudiant}/restore",
+ *     path="/api/etudiants/{id}/restore",
  *     summary="Restorer un etudiant",
  *     description="",
  *         security={
@@ -36,7 +36,7 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="400", description="Bad Request"),
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
- *     @OA\Parameter(in="path", name="etudiant", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
@@ -45,7 +45,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\DELETE(
- *     path="/api/etudiants/{etudiant}",
+ *     path="/api/etudiants/{id}",
  *     summary="Archiver un etudiant",
  *     description="",
  *         security={
@@ -55,7 +55,9 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
  * @OA\Response(response="404", description="Not Found"),
- *     @OA\Parameter(in="path", name="etudiant", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\Parameter(in="path", name="", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
@@ -64,7 +66,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\PUT(
- *     path="/api/etudiants/{etudiant}",
+ *     path="/api/etudiants/{id}",
  *     summary="Modifier un etudiant",
  *     description="",
  *         security={
@@ -73,16 +75,36 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="200", description="OK"),
  * @OA\Response(response="404", description="Not Found"),
  * @OA\Response(response="500", description="Internal Server Error"),
- *     @OA\Parameter(in="path", name="etudiant", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="application/x-www-form-urlencoded",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                     @OA\Property(property="prenom", type="string"),
+ *                     @OA\Property(property="nom", type="string"),
+ *                     @OA\Property(property="adresse", type="string"),
+ *                     @OA\Property(property="telephone", type="string"),
+ *                     @OA\Property(property="matricule", type="string"),
+ *                     @OA\Property(property="date_naissance", type="string"),
+ *                     @OA\Property(property="email", type="string"),
+ *                     @OA\Property(property="mot_de_passe", type="string"),
+ *                     @OA\Property(property="photo", type="string"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
  *     tags={"Gestion Etudiant"},
 *),
 
 
  * @OA\DELETE(
- *     path="/api/etudiants/{etudiant}/force-delete",
+ *     path="/api/etudiants/{id}/force-delete",
  *     summary="Supprimer definitivement un etudiant",
  *     description="",
  *         security={
@@ -92,7 +114,7 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
  * @OA\Response(response="404", description="Not Found"),
- *     @OA\Parameter(in="path", name="etudiant", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
